// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module.exports = "bar";

=====================================output=====================================
module.exports = "bar";

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var x = require('./bar'); // bar.js does not work
console.log(x);

=====================================output=====================================
var x = require("./bar"); // bar.js does not work
console.log(x);

================================================================================
`;
